config/iptables
# Generated by iptables-save v1.6.1 on Wed Feb 27 16:51:20 2019
*filter
# defaults
:INPUT DROP [4:1090]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [6:373]
# INPUT Chain
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT -m comment --comment "existing connections"
-A INPUT -s 127.0.0.1/32 -j ACCEPT -m comment --comment "local traffic"
-A INPUT -p icmp -j ACCEPT -m comment --comment "ping, etc."
-A INPUT -i lo -j ACCEPT -m comment --comment "loopback interface"
# OUTPUT Chain
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT -m comment --comment "existing connections"
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT -m comment --comment "HTTPS"
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT -m comment --comment HTTP
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT -m comment --comment SSH
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT -m comment --comment DNS
-A OUTPUT -p tcp -m tcp --dport 43 -j ACCEPT -m comment --comment whois
-A OUTPUT -d 127.0.0.1 -j ACCEPT -m comment --comment "local traffic"
-A OUTPUT -p icmp -j ACCEPT -m comment --comment "ping, etc."
-A OUTPUT -p tcp --dport 9999 -d termbin.com -j ACCEPT -m comment --comment "webpaste script. note: iptables caches the IP on the first lookup, so this may not play nice with dynamic DNS"
-A OUTPUT -m limit --limit 2/min -j LOG --log-prefix "IPTables: DROP: " --log-level 4 -m comment --comment "log dropped packets, see https://www.thegeekstuff.com/2012/08/iptables-log-packets"
COMMIT
# Completed on Wed Feb 27 16:51:20 2019
